[tool.poetry]
name = "bip44"
version = "0.1.3"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Simple Python bip44 implementation. Mnemonic + bip32."
keywords = ["bitcoin", "ethereum", "elliptic curves", "cryptocurrency", "blockchain"]
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/python-bip44"

[tool.poetry.dependencies]
python = "^3.7"

# 3rd party
bip32 = "^3.1"
mnemonic = "^0.20"
pycryptodome = "^3.16.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
flake8 = {version = "^6.0.0", python = "^3.8.1"}
ipython = {version = "^8.7.0", python = "^3.8"}
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
