[tool.poetry]
name = "bip44"
version = "0.1.5"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Simple Python bip44 implementation. Mnemonic + bip32."
keywords = ["bitcoin", "ethereum", "elliptic curves", "cryptocurrency", "blockchain"]
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/python-bip44"

[tool.poetry.dependencies]
python = "^3.8.1"

# 3rd party
bip32 = ">=3.4"
mnemonic = ">=0.20"
pycryptodome = ">=3.19.1"

[tool.poetry.group.dev.dependencies]
ipython = {version = "8.32.0", python = "^3.10"}
mypy = "^1.13.0"
ruff = "^0.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = {version = "^6.0.0", python = "^3.9"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
