[tool.poetry]
name = "bip44"
version = "0.1.6"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Simple Python bip44 implementation. Mnemonic + bip32."
keywords = ["bitcoin", "ethereum", "elliptic curves", "cryptocurrency", "blockchain"]
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/python-bip44"

[tool.poetry.dependencies]
python = "^3.9"

# 3rd party
bip32 = ">=3.4"
mnemonic = ">=0.20"
pycryptodome = ">=3.19.1"

[tool.poetry.group.dev.dependencies]
ipython = {version = "9.7.0", python = "^3.11"}
ruff = "^0.14.5"
ty = "^0.0.1a26"

[tool.poetry.group.test.dependencies]
pytest = {version = "^9.0.0", python = "^3.10"}
pytest-cov = {version = "^7.0.0", python = "^3.10"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
